
 * Add "Delete comment and children" context menu command to delete a comment
   and any comments encapsulated by it (#198).

 * Add "Apply template from cursor" option to binary template tool.

 * Fix cases where the strings tool would appear to run forever with an empty
   file.

 * Remove strings from the strings panel when they are deleted from the file.

Version 0.5.4 (2022-10-23)

 * Allow passing arguments to structs created via ArrayResize() and
   ArrayExtend() template functions.

 * Fix parsing of whitespace in template array dereference (#175).

 * Display offsets in comments panel (#165).

 * Don't show expand arrows next to comments without children in comments
   panel on Windows/macOS.

 * Improve performance of templates that declare many (thousands+) of
   variables in the file.

 * Add Error() function for templates (#186).

 * Fix crash when attempting to use string as a file variable in
   templates (#185).

 * [Pavel Martens] Add plugin for annotating pcap files.

Version 0.5.3 (2022-06-25)

 * Fix some undefined behaviour issues.

Version 0.5.2 (2022-06-24)

 * Correctly nest comments when updating comments panel (#169).

 * Update text in comments panel when a comment is modified.

 * Fix display of >4GiB virtual offsets in files that are <=4GiB (#170).

 * Add support for code page 437 (IBM) and 932/936/949/950 (Microsoft).

 * Fix handling of multibyte character boundaries in document view.

 * Draw wide characters in document view (#173).

 * Move forwards/backwards and select whole instructions from disassembly
   in document view.

 * Don't capture tab key press in text area of document view.

 * Add missing error checks.

 * Add number base option to "Jump to offset" dialog.

 * Drawing optimisations (improves responsiveness), particularly on macOS.

Version 0.5.1 (2022-04-29)

 * Fix macOS build to run on 10.13 (High Sierra) or later.

 * Fix 'install' target on BSD platforms.

Version 0.5.0 (2022-04-23)
