@@ -35,6 +35,8 @@ Version TBA
 
  * Remove strings from the strings panel when they are deleted from the file.
 
+ * Add ReadString() template function.
+
 Version 0.5.4 (2022-10-23)
 
  * Allow passing arguments to structs created via ArrayResize() and
